--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@nlpjs/lang-da": "^4.26.1",
+    "@nlpjs/lang-de": "^4.26.1",
+    "@nlpjs/lang-en": "^4.26.1",
+    "@nlpjs/lang-fr": "^4.26.1",
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mysql2": "^3.11.5"
+    "lodash": "^4.17.21",
+    "mysql2": "^3.11.5",
+    "sqlite3": "^5.1.7",
+    "stopword": "^3.1.3",
+    "stopwords-iso": "^1.1.0"
   }
 }
