--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nlpjs/lang-en": "^4.26.1",
     "@nlpjs/lang-fr": "^4.26.1",
     "chart.js": "^4.4.7",
+    "chartjs-chart-geo": "^4.3.4",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "lodash": "^4.17.21",
